fix: fixed the menubtns overflow, cleaned the stateflow to be better

--- a/src/style.css
+++ b/src/style.css
@@ -5,14 +5,23 @@ body {
 .invis{
     display:None;
 }
+
+.icon{
+    width: 20px;
+    height: 20px;
+}
+
+.bicon{
+    width: 30px;
+    height: 30px;
+}
+
 .stage1 {
-    position: fixed;
+    position:absolute;
     margin-top: 10vh;
     width: 100vw;
     justify-content: center;
-    align-items: center;
     flex-flow: column;
-    flex-wrap: wrap;
     height: 100vh; 
     z-index: 0;
 }
@@ -50,7 +59,7 @@ body {
 }
 .menuBar{
     background-color: #575656;
-    padding: 14px;
+    padding: 1vh;
     height: 5vh;
     display: flex;
     gap: 9px;
@@ -58,24 +67,22 @@ body {
     top: 0;
     width: 100vw;
     align-items: center;
+    
 }
 .menubtns{
     flex-flow: column;
-    height: 100vh;
+    height: 93vh;
     width: 40vw;
+    justify-content: space-around;
+    gap: 0.5%;
+    padding-left: 2%;
 }
 .menubtns button{
-    margin: 20px;
-    height: 18%;
-    display: flex;
-    text-align: center;
+    flex-grow: 2;
+    flex-shrink: 2;
+    justify-content: center;
     align-items: center;
     gap: 3px;
-}
-
-.menubtns img{
-    height: 20px;
-    width: 20px;
 }
 
 .menuicon{
@@ -85,9 +92,7 @@ body {
     width: 20px;
     height: 20px;
 }
-.logo{
-    width: 5%;    
-}
+
 
 .title{
     display: flex;
@@ -96,39 +101,44 @@ body {
 }
 #selecBtns{
     display: flex;
-    height: 30vh;
-    width: 30vw;
-    align-items: center;
+    flex-shrink: 2;
+    flex-grow: 2;
     justify-content: center;
+    align-items: center;
 }
 .modeSelec{
     flex-flow: column;
     gap: 5px;
     flex-grow: 2;
-    height: 100%;
-    width: 100%;
+    flex-shrink: 2;
     justify-content: center;
+    align-items: center;
 }
 .modeSelec button{
-    background-color: #000000;
-    color: aliceblue;
-    border: none;
+    height: 100%;
+    width: 70%;
+    display: flex;
+    color: #000000;
+    border-color: #000000;
+    background-color: aliceblue;
     border-radius: 5px;
-    height: 20%;
-    width: 100%;
-    padding: 5px;
+    font-size: 250%;
+    align-items: center;
+    justify-content: center;
+    gap: 1%;
+    padding: 1vh 1vw;
 }
 .welcometxt {
     color: rgb(0, 0, 0);
     text-align: center;
-    font-size: 350%;
+    font-size: 10vh;
 }
 
 .startbtn {
     background-color: rgb(1, 0, 0);
     color: aliceblue;
-    font-size: 500%;
-    font-weight: 100;
+    font-size: 300%;
+    font-weight: 300%;
     border: none;
     border-radius: 13px;
     align-items: center;
